--- a/faq-accordion-card/index.html
+++ b/faq-accordion-card/index.html
@@ -50,16 +50,14 @@
 	<body>
 	<div class="container">
 		<div class="faq-card">
-			<img src="./images/illustration-woman-online-mobile.svg" class="woman-mobile mobile-only"/>
-			<img src="images/illustration-box-desktop.svg" class="box mobile-hide"/>
-			<div class="bg-img">
-				<!-- <img src="./images/bg-pattern-desktop.svg" alt="" > -->
-			</div>
+			<img src="./images/illustration-woman-online-mobile.svg" class="woman-mobile mobile-only" alt="woman-illustration"/>
+			<img src="images/illustration-box-desktop.svg" class="box mobile-hide" alt="box-illustration"/>
+		
 			<div class="img-container">
-				<img src="./images/illustration-woman-online-desktop.svg" class="mobile-hide">
+				<img src="./images/illustration-woman-online-desktop.svg" alt="woman-illustration" class="mobile-hide">
 			</div>
 			<ul class="faq-list">
-				<h1>FAQ</h1>
+				<h2 class="faq-title">FAQ</h2>
 				<li class="faq-item">
 					<h2 onclick="handleClick(this)">
 						How many team members can I invite?	
